--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "543217a0",
+   "id": "8757cf66",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78d8cf75",
+   "id": "4c233f89",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be9fd60c",
+   "id": "d761b7b9",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "762e488b",
+   "id": "2cf3d72d",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df4f6cbd",
+   "id": "70631d7e",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c457817",
+   "id": "6b63eb5c",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3d429720",
+   "id": "1bd191ec",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-29T18:53:34.603783Z",
-     "iopub.status.busy": "2025-01-29T18:53:34.603583Z",
-     "iopub.status.idle": "2025-01-29T18:53:37.457782Z",
-     "shell.execute_reply": "2025-01-29T18:53:37.457179Z"
+     "iopub.execute_input": "2025-01-30T09:34:29.203039Z",
+     "iopub.status.busy": "2025-01-30T09:34:29.202850Z",
+     "iopub.status.idle": "2025-01-30T09:34:32.123517Z",
+     "shell.execute_reply": "2025-01-30T09:34:32.122931Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "039bfd1b",
+   "id": "cf127083",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72c68552",
+   "id": "557321f4",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "307f875d",
+   "id": "9d43091b",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cb7d0ac",
+   "id": "a2f8ea97",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a72b91a7",
+   "id": "b5db0e1c",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "389caa1b",
+   "id": "41be20ea",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b0c3af0",
+   "id": "dc944dbc",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57e1649d",
+   "id": "f7846ff0",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "182e5ba6",
+   "id": "60b2673a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-29T18:53:37.459883Z",
-     "iopub.status.busy": "2025-01-29T18:53:37.459626Z",
-     "iopub.status.idle": "2025-01-29T18:53:39.364357Z",
-     "shell.execute_reply": "2025-01-29T18:53:39.363825Z"
+     "iopub.execute_input": "2025-01-30T09:34:32.125841Z",
+     "iopub.status.busy": "2025-01-30T09:34:32.125399Z",
+     "iopub.status.idle": "2025-01-30T09:34:34.092123Z",
+     "shell.execute_reply": "2025-01-30T09:34:34.091535Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c16145b",
+   "id": "e6bf7f23",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "00a7035e",
+   "id": "27643b44",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-29T18:53:39.366183Z",
-     "iopub.status.busy": "2025-01-29T18:53:39.365995Z",
-     "iopub.status.idle": "2025-01-29T18:53:39.369582Z",
-     "shell.execute_reply": "2025-01-29T18:53:39.369030Z"
+     "iopub.execute_input": "2025-01-30T09:34:34.094261Z",
+     "iopub.status.busy": "2025-01-30T09:34:34.093932Z",
+     "iopub.status.idle": "2025-01-30T09:34:34.097339Z",
+     "shell.execute_reply": "2025-01-30T09:34:34.096817Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e72073d",
+   "id": "5402331d",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33395a10",
+   "id": "2b68f7e6",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6336d83b",
+   "id": "5fe40d4e",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1221e00b",
+   "id": "876006f3",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ef60cce1",
+   "id": "137e9e50",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-29T18:53:39.371435Z",
-     "iopub.status.busy": "2025-01-29T18:53:39.371130Z",
-     "iopub.status.idle": "2025-01-29T18:53:39.412846Z",
-     "shell.execute_reply": "2025-01-29T18:53:39.412313Z"
+     "iopub.execute_input": "2025-01-30T09:34:34.099240Z",
+     "iopub.status.busy": "2025-01-30T09:34:34.099062Z",
+     "iopub.status.idle": "2025-01-30T09:34:34.142033Z",
+     "shell.execute_reply": "2025-01-30T09:34:34.141518Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c30f1ff",
+   "id": "77d315c3",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "85c76da9",
+   "id": "aea1e5fe",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-29T18:53:39.414729Z",
-     "iopub.status.busy": "2025-01-29T18:53:39.414385Z",
-     "iopub.status.idle": "2025-01-29T18:53:39.478852Z",
-     "shell.execute_reply": "2025-01-29T18:53:39.478357Z"
+     "iopub.execute_input": "2025-01-30T09:34:34.143751Z",
+     "iopub.status.busy": "2025-01-30T09:34:34.143574Z",
+     "iopub.status.idle": "2025-01-30T09:34:34.211023Z",
+     "shell.execute_reply": "2025-01-30T09:34:34.210474Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63937c2c",
+   "id": "1d19952e",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7eae0bfc",
+   "id": "f96e436e",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3649dd20",
+   "id": "28cfbbbf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-29T18:53:39.480792Z",
-     "iopub.status.busy": "2025-01-29T18:53:39.480423Z",
-     "iopub.status.idle": "2025-01-29T18:53:39.507689Z",
-     "shell.execute_reply": "2025-01-29T18:53:39.507243Z"
+     "iopub.execute_input": "2025-01-30T09:34:34.212851Z",
+     "iopub.status.busy": "2025-01-30T09:34:34.212668Z",
+     "iopub.status.idle": "2025-01-30T09:34:34.241262Z",
+     "shell.execute_reply": "2025-01-30T09:34:34.240798Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5547c76a",
+   "id": "b7db6ab9",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e364cee1",
+   "id": "6bc7b546",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1431d852",
+   "id": "dba302a9",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "526578aa",
+   "id": "6312b523",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50412651",
+   "id": "ac15b34a",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a6c7504e",
+   "id": "379174d3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-29T18:53:39.509585Z",
-     "iopub.status.busy": "2025-01-29T18:53:39.509402Z",
-     "iopub.status.idle": "2025-01-29T18:53:39.513597Z",
-     "shell.execute_reply": "2025-01-29T18:53:39.513011Z"
+     "iopub.execute_input": "2025-01-30T09:34:34.243181Z",
+     "iopub.status.busy": "2025-01-30T09:34:34.242858Z",
+     "iopub.status.idle": "2025-01-30T09:34:34.247003Z",
+     "shell.execute_reply": "2025-01-30T09:34:34.246444Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d43b11d",
+   "id": "018ccc6d",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "75fe3a6b",
+   "id": "a22366c2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-29T18:53:39.515324Z",
-     "iopub.status.busy": "2025-01-29T18:53:39.515151Z",
-     "iopub.status.idle": "2025-01-29T18:53:39.518241Z",
-     "shell.execute_reply": "2025-01-29T18:53:39.517733Z"
+     "iopub.execute_input": "2025-01-30T09:34:34.248618Z",
+     "iopub.status.busy": "2025-01-30T09:34:34.248447Z",
+     "iopub.status.idle": "2025-01-30T09:34:34.251280Z",
+     "shell.execute_reply": "2025-01-30T09:34:34.250823Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65f8e697",
+   "id": "90bc9156",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "57b78be0",
+   "id": "33b937f4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-29T18:53:39.520020Z",
-     "iopub.status.busy": "2025-01-29T18:53:39.519644Z",
-     "iopub.status.idle": "2025-01-29T18:53:42.048731Z",
-     "shell.execute_reply": "2025-01-29T18:53:42.048240Z"
+     "iopub.execute_input": "2025-01-30T09:34:34.253047Z",
+     "iopub.status.busy": "2025-01-30T09:34:34.252717Z",
+     "iopub.status.idle": "2025-01-30T09:34:36.815908Z",
+     "shell.execute_reply": "2025-01-30T09:34:36.815288Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e51be662",
+   "id": "27b96ab3",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5709b045",
+   "id": "5d5cf5fd",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d63cb0bc",
+   "id": "de0067dc",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c646d049",
+   "id": "466d10c5",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f54945b1",
+   "id": "8c528ee6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-29T18:53:42.050655Z",
-     "iopub.status.busy": "2025-01-29T18:53:42.050471Z",
-     "iopub.status.idle": "2025-01-29T18:53:42.053905Z",
-     "shell.execute_reply": "2025-01-29T18:53:42.053268Z"
+     "iopub.execute_input": "2025-01-30T09:34:36.818051Z",
+     "iopub.status.busy": "2025-01-30T09:34:36.817715Z",
+     "iopub.status.idle": "2025-01-30T09:34:36.821163Z",
+     "shell.execute_reply": "2025-01-30T09:34:36.820619Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f6ee42c4a40>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f9bd27d3ec0>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f63c6822",
+   "id": "a689cb44",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd237c9f",
+   "id": "43beb6ea",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cafe3cca",
+   "id": "e3fe3c64",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17a36c5c",
+   "id": "c6202251",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c5f3b5ca",
+   "id": "28be4f20",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-29T18:53:42.055608Z",
-     "iopub.status.busy": "2025-01-29T18:53:42.055437Z",
-     "iopub.status.idle": "2025-01-29T18:53:42.058336Z",
-     "shell.execute_reply": "2025-01-29T18:53:42.057824Z"
+     "iopub.execute_input": "2025-01-30T09:34:36.822943Z",
+     "iopub.status.busy": "2025-01-30T09:34:36.822638Z",
+     "iopub.status.idle": "2025-01-30T09:34:36.825643Z",
+     "shell.execute_reply": "2025-01-30T09:34:36.825021Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c93d712a",
+   "id": "b39c4d8c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-29T18:53:42.060212Z",
-     "iopub.status.busy": "2025-01-29T18:53:42.059771Z",
-     "iopub.status.idle": "2025-01-29T18:53:43.101800Z",
-     "shell.execute_reply": "2025-01-29T18:53:43.101263Z"
+     "iopub.execute_input": "2025-01-30T09:34:36.827432Z",
+     "iopub.status.busy": "2025-01-30T09:34:36.827063Z",
+     "iopub.status.idle": "2025-01-30T09:34:37.876162Z",
+     "shell.execute_reply": "2025-01-30T09:34:37.875639Z"
     }
    },
    "outputs": [
